# CGCourse2026

src/: CMakeLists.txt
src/code_03_wrapping_shaders_buffers/: CMakeLists.txt
src/code_04_robotic_arm_transformations/: CMakeLists.txt
src/code_05_assonometry/: CMakeLists.txt
src/code_06_arm_rotations/: CMakeLists.txt
